WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311055
[site-isolation] Yahoo! Sign in page fails to load (login.yahoo.com)
https://bugs.webkit.org/show_bug.cgi?id=311055
Summary
[site-isolation] Yahoo! Sign in page fails to load (login.yahoo.com)
Matt Woodrow
Reported
2026-03-29 19:21:57 PDT
This page becomes blank during loading.
rdar://169742520
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2026-03-29 19:26:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61649
EWS
Comment 2
2026-03-30 13:02:56 PDT
Committed
310248@main
(f2d3449fcc50): <
https://commits.webkit.org/310248@main
> Reviewed commits have been landed. Closing PR #61649 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug