[site-isolation] Yahoo! Sign in page fails to load (login.yahoo.com) https://bugs.webkit.org/show_bug.cgi?id=311055 <rdar://169742520>

Reviewed by Simon Fraser.

When we have multiple transactions from a single main-frame process, make sure
we only pass the main frame data to the transaction handler for the main-frame
itself.

Otherwise this can use the 'root frame' from a subframe transaction, and make it
the root frame of the whole page.

* LayoutTests/http/tests/site-isolation/nested-cross-origin-iframe-expected.html: Added.
* LayoutTests/http/tests/site-isolation/nested-cross-origin-iframe.html: Added.
* LayoutTests/http/tests/site-isolation/resources/nested-cross-origin-middle-iframe.html: Added.
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTreeTransaction.mm:
(WebKit::RemoteLayerTreeTransaction::description const):
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::commitLayerTree):

Canonical link: https://commits.webkit.org/310248@main